--- a/doc/tutorials/setup_db.ipynb
+++ b/doc/tutorials/setup_db.ipynb
@@ -14,51 +14,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d6b50070-ae30-4c1c-a56a-bd8881bba1a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "EXASOL_EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "EXASOL_HOST_PORT = \"8888\"\n",
-    "EXASOL_EXTERNAL_HOST = f\"\"\"{EXASOL_EXTERNAL_HOST_NAME}:{EXASOL_HOST_PORT}\"\"\"\n",
-    "EXASOL_USER = \"sys\"\n",
-    "EXASOL_PASSWORD = \"exasol\"\n",
-    "EXASOL_BUCKETFS_PORT = \"6666\"\n",
-    "EXASOL_EXTERNAL_BUCKETFS_HOST = f\"\"\"{EXASOL_EXTERNAL_HOST_NAME}:{EXASOL_BUCKETFS_PORT}\"\"\"\n",
-    "EXASOL_BUCKETFS_USER = \"w\"\n",
-    "EXASOL_BUCKETFS_PASSWORD = \"write\"\n",
-    "EXASOL_BUCKETFS_USE_HTTPS = False\n",
-    "EXASOL_BUCKETFS_URL_PREFIX = \"https://\" if EXASOL_BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "EXASOL_BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "EXASOL_BUCKETFS_BUCKET = \"default\"\n",
-    "EXASOL_BUCKETFS_PATH = f\"/buckets/{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}\" # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "EXASOL_SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "EXASOL_UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "EXASOL_UDF_RELEASE= \"20190116\"\n",
-    "EXASOL_UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "EXASOL_SCRIPT_LANGUAGES = f\"{EXASOL_SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}/{EXASOL_UDF_FLAVOR}?lang=python#buckets/{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}/{EXASOL_UDF_FLAVOR}/exaudf/{EXASOL_UDF_CLIENT}\";\n",
-    "EXASOL_SCHEMA = \"IDA\"\n",
+    "from dataclasses import dataclass\n",
     "\n",
-    "connection_params = {\"dns\": EXASOL_EXTERNAL_HOST, \"user\": EXASOL_USER, \"password\": EXASOL_PASSWORD, \"compression\": True}\n",
+    "@dataclass\n",
+    "class SandboxConfig:\n",
+    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
+    "    HOST_PORT = \"8888\"\n",
     "\n",
-    "params = {\n",
-    "    \"script_languages\": EXASOL_SCRIPT_LANGUAGES,\n",
-    "    \"script_language_name\": EXASOL_SCRIPT_LANGUAGE_NAME,\n",
-    "    \"schema\": EXASOL_SCHEMA,\n",
-    "    \"EXASOL_BUCKETFS_PORT\": EXASOL_BUCKETFS_PORT,\n",
-    "    \"EXASOL_BUCKETFS_USER\": EXASOL_BUCKETFS_USER,\n",
-    "    \"EXASOL_BUCKETFS_PASSWORD\": EXASOL_BUCKETFS_PASSWORD,\n",
-    "    \"EXASOL_BUCKETFS_USE_HTTPS\": EXASOL_BUCKETFS_USE_HTTPS,\n",
-    "    \"EXASOL_BUCKETFS_BUCKET\": EXASOL_BUCKETFS_BUCKET,\n",
-    "    \"EXASOL_BUCKETFS_PATH\": EXASOL_BUCKETFS_PATH\n",
-    "}"
+    "    @property\n",
+    "    def EXTERNAL_HOST(self):\n",
+    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
+    "\n",
+    "    USER = \"sys\"\n",
+    "    PASSWORD = \"exasol\"\n",
+    "    BUCKETFS_PORT = \"6666\"\n",
+    "    BUCKETFS_USER = \"w\"\n",
+    "    BUCKETFS_PASSWORD = \"write\"\n",
+    "    BUCKETFS_USE_HTTPS = False\n",
+    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
+    "    BUCKETFS_BUCKET = \"default\"\n",
+    "\n",
+    "    @property\n",
+    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
+    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
+    "\n",
+    "    @property\n",
+    "    def BUCKETFS_URL_PREFIX(self):\n",
+    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
+    "\n",
+    "    @property\n",
+    "    def BUCKETFS_PATH(self):\n",
+    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
+    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
+    "\n",
+    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
+    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
+    "    UDF_RELEASE= \"20190116\"\n",
+    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
+    "    SCHEMA = \"IDA\"\n",
+    "\n",
+    "    @property\n",
+    "    def SCRIPT_LANGUAGES(self):\n",
+    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
+    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
+    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
+    "\n",
+    "    @property\n",
+    "    def connection_params(self):\n",
+    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
+    "\n",
+    "    @property\n",
+    "    def params(self):\n",
+    "        return {\n",
+    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
+    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
+    "            \"schema\": self.SCHEMA,\n",
+    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
+    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
+    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
+    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
+    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
+    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
+    "        }\n",
+    "\n",
+    "conf = SandboxConfig()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7f31ccfd-bd6d-435a-9f4c-ae2e5af04ea3",
    "metadata": {},
    "outputs": [
@@ -66,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creates Schema in 36.65ms\n"
+      "creates Schema in 43.92ms\n"
      ]
     }
    ],
