--- a/doc/tutorials/sklearn/sklearn_predict_abalone.ipynb
+++ b/doc/tutorials/sklearn/sklearn_predict_abalone.ipynb
@@ -16,46 +16,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8a5489b1-5471-4dcc-8010-62d7662b3581",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "EXASOL_EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "EXASOL_HOST_PORT = \"8888\"\n",
-    "EXASOL_EXTERNAL_HOST = f\"\"\"{EXASOL_EXTERNAL_HOST_NAME}:{EXASOL_HOST_PORT}\"\"\"\n",
-    "EXASOL_USER = \"sys\"\n",
-    "EXASOL_PASSWORD = \"exasol\"\n",
-    "EXASOL_BUCKETFS_PORT = \"6666\"\n",
-    "EXASOL_EXTERNAL_BUCKETFS_HOST = f\"\"\"{EXASOL_EXTERNAL_HOST_NAME}:{EXASOL_BUCKETFS_PORT}\"\"\"\n",
-    "EXASOL_BUCKETFS_USER = \"w\"\n",
-    "EXASOL_BUCKETFS_PASSWORD = \"write\"\n",
-    "EXASOL_BUCKETFS_USE_HTTPS = False\n",
-    "EXASOL_BUCKETFS_URL_PREFIX = \"https://\" if EXASOL_BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "EXASOL_BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "EXASOL_BUCKETFS_BUCKET = \"default\"\n",
-    "EXASOL_BUCKETFS_PATH = f\"/buckets/{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}\" # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "EXASOL_SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "EXASOL_UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "EXASOL_UDF_RELEASE= \"20190116\"\n",
-    "EXASOL_UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "EXASOL_SCRIPT_LANGUAGES = f\"{EXASOL_SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}/{EXASOL_UDF_FLAVOR}?lang=python#buckets/{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}/{EXASOL_UDF_FLAVOR}/exaudf/{EXASOL_UDF_CLIENT}\";\n",
-    "EXASOL_SCHEMA = \"IDA\"\n",
+    "from dataclasses import dataclass\n",
     "\n",
-    "connection_params = {\"dns\": EXASOL_EXTERNAL_HOST, \"user\": EXASOL_USER, \"password\": EXASOL_PASSWORD, \"compression\": True}\n",
+    "@dataclass\n",
+    "class SandboxConfig:\n",
+    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
+    "    HOST_PORT = \"8888\"\n",
     "\n",
-    "params = {\n",
-    "    \"script_languages\": EXASOL_SCRIPT_LANGUAGES,\n",
-    "    \"script_language_name\": EXASOL_SCRIPT_LANGUAGE_NAME,\n",
-    "    \"schema\": EXASOL_SCHEMA,\n",
-    "    \"EXASOL_BUCKETFS_PORT\": EXASOL_BUCKETFS_PORT,\n",
-    "    \"EXASOL_BUCKETFS_USER\": EXASOL_BUCKETFS_USER,\n",
-    "    \"EXASOL_BUCKETFS_PASSWORD\": EXASOL_BUCKETFS_PASSWORD,\n",
-    "    \"EXASOL_BUCKETFS_USE_HTTPS\": EXASOL_BUCKETFS_USE_HTTPS,\n",
-    "    \"EXASOL_BUCKETFS_BUCKET\": EXASOL_BUCKETFS_BUCKET,\n",
-    "    \"EXASOL_BUCKETFS_PATH\": EXASOL_BUCKETFS_PATH\n",
-    "}"
+    "    @property\n",
+    "    def EXTERNAL_HOST(self):\n",
+    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
+    "\n",
+    "    USER = \"sys\"\n",
+    "    PASSWORD = \"exasol\"\n",
+    "    BUCKETFS_PORT = \"6666\"\n",
+    "    BUCKETFS_USER = \"w\"\n",
+    "    BUCKETFS_PASSWORD = \"write\"\n",
+    "    BUCKETFS_USE_HTTPS = False\n",
+    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
+    "    BUCKETFS_BUCKET = \"default\"\n",
+    "\n",
+    "    @property\n",
+    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
+    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
+    "\n",
+    "    @property\n",
+    "    def BUCKETFS_URL_PREFIX(self):\n",
+    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
+    "\n",
+    "    @property\n",
+    "    def BUCKETFS_PATH(self):\n",
+    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
+    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
+    "\n",
+    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
+    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
+    "    UDF_RELEASE= \"20190116\"\n",
+    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
+    "    SCHEMA = \"IDA\"\n",
+    "\n",
+    "    @property\n",
+    "    def SCRIPT_LANGUAGES(self):\n",
+    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
+    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
+    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
+    "\n",
+    "    @property\n",
+    "    def connection_params(self):\n",
+    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
+    "\n",
+    "    @property\n",
+    "    def params(self):\n",
+    "        return {\n",
+    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
+    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
+    "            \"schema\": self.SCHEMA,\n",
+    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
+    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
+    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
+    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
+    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
+    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
+    "        }\n",
+    "\n",
+    "conf = SandboxConfig()"
    ]
   },
   {
@@ -68,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "795d44f8-bfb7-49de-9964-53e5d8cf159a",
    "metadata": {},
    "outputs": [
@@ -76,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting predictions took: 2.87s\n"
+      "Getting predictions took: 3.02s\n"
      ]
     },
     {
@@ -107,28 +137,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18446744073709552175</td>\n",
-       "      <td>7.955215</td>\n",
+       "      <td>18446744073709551679</td>\n",
+       "      <td>6.755714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>18446744073709551965</td>\n",
-       "      <td>7.536855</td>\n",
+       "      <td>18446744073709551850</td>\n",
+       "      <td>6.925311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18446744073709552082</td>\n",
-       "      <td>7.962816</td>\n",
+       "      <td>18446744073709552278</td>\n",
+       "      <td>6.716555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>18446744073709552267</td>\n",
-       "      <td>7.651000</td>\n",
+       "      <td>18446744073709551975</td>\n",
+       "      <td>7.657736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>18446744073709552084</td>\n",
-       "      <td>9.214513</td>\n",
+       "      <td>18446744073709551690</td>\n",
+       "      <td>7.762828</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -136,14 +166,14 @@
       ],
       "text/plain": [
        "              sample_id     RINGS\n",
-       "0  18446744073709552175  7.955215\n",
-       "1  18446744073709551965  7.536855\n",
-       "2  18446744073709552082  7.962816\n",
-       "3  18446744073709552267  7.651000\n",
-       "4  18446744073709552084  9.214513"
+       "0  18446744073709551679  6.755714\n",
+       "1  18446744073709551850  6.925311\n",
+       "2  18446744073709552278  6.716555\n",
+       "3  18446744073709551975  7.657736\n",
+       "4  18446744073709551690  7.762828"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,12 +183,13 @@
     "from stopwatch import Stopwatch\n",
     "\n",
     "LABEL_COLUMN = 'RINGS'\n",
+    "params = dict(conf.params)\n",
     "params['test_table'] = 'ABALONE_TEST'\n",
-    "params['model_path'] = f'{EXASOL_BUCKETFS_PATH}/abalone_svm_model.pkl'\n",
+    "params['model_path'] = f'{conf.BUCKETFS_PATH}/abalone_svm_model.pkl'\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with pyexasol.connect(dsn=EXASOL_EXTERNAL_HOST, user=EXASOL_USER, password=EXASOL_PASSWORD, compression=True) as conn:\n",
+    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
     "    # Get the list of feature columns\n",
     "    sql = 'SELECT * FROM {schema!i}.{test_table!i} LIMIT 1'\n",
     "    df_tmp = conn.export_to_pandas(query_or_table=sql, query_params=params)\n",
@@ -184,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "caa69fda-279e-4357-95f1-da9702982a67",
    "metadata": {},
    "outputs": [
@@ -192,9 +223,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 1.5339997227381341\n",
-      "Mean squared error: 5.284490858004687\n",
-      "Explained variance: 0.57724006901576\n"
+      "Mean absolute error: 1.4693975242754505\n",
+      "Mean squared error: 4.734913393345643\n",
+      "Explained variance: 0.5572854305515393\n"
      ]
     }
    ],
@@ -204,7 +235,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Get the ground truth labels for the test set.\n",
-    "with pyexasol.connect(dsn=EXASOL_EXTERNAL_HOST, user=EXASOL_USER, password=EXASOL_PASSWORD, compression=True) as conn:\n",
+    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
     "    sql = f'SELECT ROWID AS [sample_id], [{LABEL_COLUMN}] FROM {{schema!i}}.{{test_table!i}}'\n",
     "    df_true = conn.export_to_pandas(query_or_table=sql, query_params=params)\n",
     "\n",
