--- a/doc/tutorials/sklearn/sklearn_train_abalone.ipynb
+++ b/doc/tutorials/sklearn/sklearn_train_abalone.ipynb
@@ -18,46 +18,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fa6c628f-853e-4850-8bab-46f7f645856e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "EXASOL_EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "EXASOL_HOST_PORT = \"8888\"\n",
-    "EXASOL_EXTERNAL_HOST = f\"\"\"{EXASOL_EXTERNAL_HOST_NAME}:{EXASOL_HOST_PORT}\"\"\"\n",
-    "EXASOL_USER = \"sys\"\n",
-    "EXASOL_PASSWORD = \"exasol\"\n",
-    "EXASOL_BUCKETFS_PORT = \"6666\"\n",
-    "EXASOL_EXTERNAL_BUCKETFS_HOST = f\"\"\"{EXASOL_EXTERNAL_HOST_NAME}:{EXASOL_BUCKETFS_PORT}\"\"\"\n",
-    "EXASOL_BUCKETFS_USER = \"w\"\n",
-    "EXASOL_BUCKETFS_PASSWORD = \"write\"\n",
-    "EXASOL_BUCKETFS_USE_HTTPS = False\n",
-    "EXASOL_BUCKETFS_URL_PREFIX = \"https://\" if EXASOL_BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "EXASOL_BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "EXASOL_BUCKETFS_BUCKET = \"default\"\n",
-    "EXASOL_BUCKETFS_PATH = f\"/buckets/{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}\" # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "EXASOL_SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "EXASOL_UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "EXASOL_UDF_RELEASE= \"20190116\"\n",
-    "EXASOL_UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "EXASOL_SCRIPT_LANGUAGES = f\"{EXASOL_SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}/{EXASOL_UDF_FLAVOR}?lang=python#buckets/{EXASOL_BUCKETFS_SERVICE}/{EXASOL_BUCKETFS_BUCKET}/{EXASOL_UDF_FLAVOR}/exaudf/{EXASOL_UDF_CLIENT}\";\n",
-    "EXASOL_SCHEMA = \"IDA\"\n",
+    "from dataclasses import dataclass\n",
     "\n",
-    "connection_params = {\"dns\": EXASOL_EXTERNAL_HOST, \"user\": EXASOL_USER, \"password\": EXASOL_PASSWORD, \"compression\": True}\n",
+    "@dataclass\n",
+    "class SandboxConfig:\n",
+    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
+    "    HOST_PORT = \"8888\"\n",
     "\n",
-    "params = {\n",
-    "    \"script_languages\": EXASOL_SCRIPT_LANGUAGES,\n",
-    "    \"script_language_name\": EXASOL_SCRIPT_LANGUAGE_NAME,\n",
-    "    \"schema\": EXASOL_SCHEMA,\n",
-    "    \"EXASOL_BUCKETFS_PORT\": EXASOL_BUCKETFS_PORT,\n",
-    "    \"EXASOL_BUCKETFS_USER\": EXASOL_BUCKETFS_USER,\n",
-    "    \"EXASOL_BUCKETFS_PASSWORD\": EXASOL_BUCKETFS_PASSWORD,\n",
-    "    \"EXASOL_BUCKETFS_USE_HTTPS\": EXASOL_BUCKETFS_USE_HTTPS,\n",
-    "    \"EXASOL_BUCKETFS_BUCKET\": EXASOL_BUCKETFS_BUCKET,\n",
-    "    \"EXASOL_BUCKETFS_PATH\": EXASOL_BUCKETFS_PATH\n",
-    "}"
+    "    @property\n",
+    "    def EXTERNAL_HOST(self):\n",
+    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
+    "\n",
+    "    USER = \"sys\"\n",
+    "    PASSWORD = \"exasol\"\n",
+    "    BUCKETFS_PORT = \"6666\"\n",
+    "    BUCKETFS_USER = \"w\"\n",
+    "    BUCKETFS_PASSWORD = \"write\"\n",
+    "    BUCKETFS_USE_HTTPS = False\n",
+    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
+    "    BUCKETFS_BUCKET = \"default\"\n",
+    "\n",
+    "    @property\n",
+    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
+    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
+    "\n",
+    "    @property\n",
+    "    def BUCKETFS_URL_PREFIX(self):\n",
+    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
+    "\n",
+    "    @property\n",
+    "    def BUCKETFS_PATH(self):\n",
+    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
+    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
+    "\n",
+    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
+    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
+    "    UDF_RELEASE= \"20190116\"\n",
+    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
+    "    SCHEMA = \"IDA\"\n",
+    "\n",
+    "    @property\n",
+    "    def SCRIPT_LANGUAGES(self):\n",
+    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
+    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
+    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
+    "\n",
+    "    @property\n",
+    "    def connection_params(self):\n",
+    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
+    "\n",
+    "    @property\n",
+    "    def params(self):\n",
+    "        return {\n",
+    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
+    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
+    "            \"schema\": self.SCHEMA,\n",
+    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
+    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
+    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
+    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
+    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
+    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
+    "        }\n",
+    "\n",
+    "conf = SandboxConfig()"
    ]
   },
   {
@@ -70,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "68be5d5a-ebcc-4fb4-829f-29a5442579d6",
    "metadata": {},
    "outputs": [
@@ -78,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading the data took: 1.16s\n"
+      "Loading the data took: 1.27s\n"
      ]
     }
    ],
@@ -89,8 +119,8 @@
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with pyexasol.connect(dsn=EXASOL_EXTERNAL_HOST, user=EXASOL_USER, password=EXASOL_PASSWORD, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(EXASOL_SCHEMA, 'ABALONE_TRAIN'))\n",
+    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
+    "    df = conn.export_to_pandas(query_or_table=(conf.SCHEMA, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)\n",
@@ -108,23 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "3bc3e231-b8fe-4498-9393-f65ecbac618e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'LENGTH': 0.3843467581506941,\n",
-       " 'DIAMETER': 0.4029831219029347,\n",
-       " 'HEIGHT': 0.37975381266846053,\n",
-       " 'WHOLE_WEIGHT': 0.3956317866384804,\n",
-       " 'SHUCKED_WEIGHT': 0.3260761868093418,\n",
-       " 'VISCERA_WEIGHT': 0.36861377572116716,\n",
-       " 'SHELL_WEIGHT': 0.4156639387513801}"
+       "{'LENGTH': 0.3777307983714149,\n",
+       " 'DIAMETER': 0.4130225409481696,\n",
+       " 'HEIGHT': 0.3730705618531607,\n",
+       " 'WHOLE_WEIGHT': 0.3839492388004473,\n",
+       " 'SHUCKED_WEIGHT': 0.33404766440572065,\n",
+       " 'VISCERA_WEIGHT': 0.35472141609994523,\n",
+       " 'SHELL_WEIGHT': 0.4472509397786135}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +164,7 @@
     "\n",
     "X_meas = X_train.drop(columns='SEX')\n",
     "mi = mutual_info_regression(X_meas, y_train)\n",
-    "dict(zip(df_measurements.columns, mi))\n"
+    "dict(zip(X_meas.columns, mi))\n"
    ]
   },
   {
@@ -147,22 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "id": "165e9d98-888e-473c-8d7a-1f304364b5bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.839928432549384e-117"
+       "2.5467010907188578e-126"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.feature_selection import f_classif\n",
+    "\n",
     "f_classif(y_train.to_frame(), X_train['SEX'])[1][0]"
    ]
   },
@@ -176,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "4feb0d95-81f8-4b93-8012-a3f39ac37f88",
    "metadata": {},
    "outputs": [
@@ -184,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training of the model took: 172.10ms\n"
+      "Training of the model took: 168.23ms\n"
      ]
     }
    ],
@@ -225,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "id": "061744b4-c401-4b79-914f-d3d3ba3aad8f",
    "metadata": {},
    "outputs": [
@@ -233,9 +265,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 1.4784716097061217\n",
-      "Mean squared error: 4.375086550238619\n",
-      "Explained variance: 0.5503658142734189\n"
+      "Mean absolute error: 1.3993917946085437\n",
+      "Mean squared error: 4.266767837896115\n",
+      "Explained variance: 0.5731816112246741\n"
      ]
     }
    ],
@@ -259,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "id": "f61810f9-3d9e-4e1a-aca3-81cf976540d3",
    "metadata": {},
    "outputs": [
@@ -267,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploading the model took: 304.44ms\n"
+      "Uploading the model took: 605.55ms\n"
      ]
     }
    ],
@@ -278,14 +310,14 @@
     "MODEL_FILE = 'abalone_svm_model.pkl'\n",
     "\n",
     "# Setup the connection parameters.\n",
-    "buckfs_url = f'{EXASOL_BUCKETFS_URL_PREFIX}{EXASOL_EXTERNAL_BUCKETFS_HOST}'\n",
-    "buckfs_credentials = {EXASOL_BUCKETFS_BUCKET: {'username': EXASOL_BUCKETFS_USER, 'password': EXASOL_BUCKETFS_PASSWORD}}\n",
+    "buckfs_url = f'{conf.BUCKETFS_URL_PREFIX}{conf.EXTERNAL_BUCKETFS_HOST}'\n",
+    "buckfs_credentials = {conf.BUCKETFS_BUCKET: {'username': conf.BUCKETFS_USER, 'password': conf.BUCKETFS_PASSWORD}}\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Connect to the BucketFS service and navigate to the bucket of choice.\n",
     "bucketfs = Service(buckfs_url, buckfs_credentials)\n",
-    "bucket = bucketfs[EXASOL_BUCKETFS_BUCKET]\n",
+    "bucket = bucketfs[conf.BUCKETFS_BUCKET]\n",
     "\n",
     "# Serialize model into a byte-array and upload it to the BucketFS, \n",
     "# where it will be saved in the file with the specified name.\n",
