Fixed left over bugs

--- a/doc/tutorials/data/data_abalone.ipynb
+++ b/doc/tutorials/data/data_abalone.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "7d1fd009-42ca-4b16-929a-d00d284e2e1f",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "863b0429-1fe3-46ae-9569-a08c11c78464",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading the data took: 928.85ms\n",
+      "Downloading the data took: 777.70ms\n",
       "  Sex  Length  Diameter  Height  Whole_weight  Shucked_weight  Viscera_weight  \\\n",
       "0   M   0.350     0.265   0.090        0.2255          0.0995          0.0485   \n",
       "1   F   0.530     0.420   0.135        0.6770          0.2565          0.1415   \n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "547907a7-b437-4ff4-8ab8-08b55e0dcc88",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
      "text": [
       "Imported 3340 rows into TRAIN.\n",
       "Imported 836 rows into TEST.\n",
-      "Importing the data took: 338.11ms\n"
+      "Importing the data took: 434.25ms\n"
      ]
     }
    ],
@@ -202,9 +202,9 @@
     "\n",
     "    # Create tables\n",
     "    sql = f'CREATE OR REPLACE TABLE {{schema!i}}.ABALONE_TRAIN({\", \".join(column_desc)})'\n",
-    "    conn.execute(query=sql, query_params=params)\n",
+    "    conn.execute(query=sql, query_params=conf.params)\n",
     "    sql = 'CREATE OR REPLACE TABLE {schema!i}.ABALONE_TEST LIKE {schema!i}.ABALONE_TRAIN'\n",
-    "    conn.execute(query=sql, query_params=params)\n",
+    "    conn.execute(query=sql, query_params=conf.params)\n",
     "\n",
     "    # Import data into Exasol\n",
     "    conn.import_from_pandas(df_train, (conf.SCHEMA, \"ABALONE_TRAIN\"))\n",
