--- a/doc/tutorials/data/data_telescope.ipynb
+++ b/doc/tutorials/data/data_telescope.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "082ac10d-1e98-4513-a52b-e3c74760c5ee",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "cab1e6a9-b640-419b-bc8e-b4379a43666d",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading the data took: 1.68s\n",
+      "Downloading the data took: 1.61s\n",
       "    fLength    fWidth   fSize   fConc  fConc1     fAsym  fM3Long  fM3Trans  \\\n",
       "0   31.6036   11.7235  2.5185  0.5303  0.3773   26.2722  23.8238   -9.9574   \n",
       "1  162.0520  136.0310  4.0612  0.0374  0.0187  116.7410 -64.8580  -45.2160   \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "9726bbfb-7d4b-4dbf-97f6-2c70260c1bfc",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
      "text": [
       "Imported 15215 rows into TRAIN.\n",
       "Imported 3804 rows into TEST.\n",
-      "Importing the data took: 570.47ms\n"
+      "Importing the data took: 529.66ms\n"
      ]
     }
    ],
@@ -204,9 +204,9 @@
     "\n",
     "    # Create tables\n",
     "    sql = f'CREATE OR REPLACE TABLE {{schema!i}}.TELESCOPE_TRAIN({\", \".join(column_desc)})'\n",
-    "    conn.execute(query=sql, query_params=params)\n",
+    "    conn.execute(query=sql, query_params=conf.params)\n",
     "    sql = 'CREATE OR REPLACE TABLE {schema!i}.TELESCOPE_TEST LIKE {schema!i}.TELESCOPE_TRAIN'\n",
-    "    conn.execute(query=sql, query_params=params)\n",
+    "    conn.execute(query=sql, query_params=conf.params)\n",
     "\n",
     "    # Import data into Exasol\n",
     "    conn.import_from_pandas(df_train, (conf.SCHEMA, \"TELESCOPE_TRAIN\"))\n",
