--- a/doc/tutorials/setup_db.ipynb
+++ b/doc/tutorials/setup_db.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d6b50070-ae30-4c1c-a56a-bd8881bba1a0",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7f31ccfd-bd6d-435a-9f4c-ae2e5af04ea3",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creates Schema in 43.92ms\n"
+      "creates Schema in 42.64ms\n"
      ]
     }
    ],
@@ -105,8 +105,8 @@
     "from stopwatch import Stopwatch\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with pyexasol.connect(dsn=EXASOL_EXTERNAL_HOST, user=EXASOL_USER, password=EXASOL_PASSWORD, compression=True) as conn:\n",
-    "    conn.execute(query=\"CREATE SCHEMA IF NOT EXISTS {schema!i}\", query_params=params)\n",
+    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
+    "    conn.execute(query=\"CREATE SCHEMA IF NOT EXISTS {schema!i}\", query_params=conf.params)\n",
     "\n",
     "print(f\"creates Schema in {stopwatch}\")"
    ]
